--- a/.github/workflows/daily-paper-download.yml
+++ b/.github/workflows/daily-paper-download.yml
@@ -11,7 +11,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-    
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -26,6 +28,8 @@ jobs:
       run: python download_papers.py
         
     - name: Commit and push if changed
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
