--- a/.github/workflows/daily-paper-translate.yml
+++ b/.github/workflows/daily-paper-translate.yml
@@ -14,7 +14,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-    
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -36,6 +38,8 @@ jobs:
         python translate_papers.py --date ${{ steps.date.outputs.date }} --api_key "$INTERNLM_API_KEY"
         
     - name: Commit and push if changed
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
