--- a/.github/workflows/daily-paper-audio.yml
+++ b/.github/workflows/daily-paper-audio.yml
@@ -1,8 +1,8 @@
-name: Daily Paper Translation
+name: Daily Paper Audio Generation
 
 on:
   workflow_run:
-    workflows: ["Daily Paper Download"]
+    workflows: ["Daily Paper Translation"]
     types:
       - completed
   workflow_dispatch:  # 允许手动触发
@@ -21,17 +21,17 @@ on:
         type: string
 
 jobs:
-  translate-papers:
+  generate-audio:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.12'
         
@@ -45,21 +45,14 @@ jobs:
       id: date
       run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
         
-    - name: Check environment
-      run: |
-        python -c "import openai; print(f'OpenAI version: {openai.__version__}')"
-        python -c "import sys; print(f'Python version: {sys.version}')"
-        
-    - name: Translate papers
-      env:
-        INTERNLM_API_KEY: ${{ secrets.INTERNLM_API_KEY }}
+    - name: Generate audio
       run: |
         if [[ -n "${{ github.event.inputs.start_date }}" && -n "${{ github.event.inputs.end_date }}" ]]; then
-          python -X dev translate_papers.py --start_date "${{ github.event.inputs.start_date }}" --end_date "${{ github.event.inputs.end_date }}" --api_key "$INTERNLM_API_KEY"
+          python generate_audio.py --start_date "${{ github.event.inputs.start_date }}" --end_date "${{ github.event.inputs.end_date }}"
         elif [[ -n "${{ github.event.inputs.single_date }}" ]]; then
-          python -X dev translate_papers.py --date "${{ github.event.inputs.single_date }}" --api_key "$INTERNLM_API_KEY"
+          python generate_audio.py --date "${{ github.event.inputs.single_date }}"
         else
-          python -X dev translate_papers.py --date "${{ steps.date.outputs.date }}" --api_key "$INTERNLM_API_KEY"
+          python generate_audio.py --date "${{ steps.date.outputs.date }}"
         fi
         
     - name: Commit and push if changed
@@ -68,5 +61,5 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add Translated_papers/
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Add translations $(date +'%Y-%m-%d')" && git push) 
+        git add Audio_papers/
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Add audio files $(date +'%Y-%m-%d')" && git push) 
