--- a/.github/workflows/daily-paper-audio.yml
+++ b/.github/workflows/daily-paper-audio.yml
@@ -16,7 +16,7 @@ on:
         required: false
         type: string
   schedule:
-    - cron: '0 8 * * 1-5'  # UTC 8:00 (Beijing 16:00) 仅在工作日运行
+    - cron: '20 10 * * 1-5'  # UTC 10:20 (Beijing 18:20) 仅在工作日运行
   workflow_run:
     workflows: ["Daily Paper Translation"]
     types:
@@ -27,9 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'schedule' && github.event.schedule != '0 8 * * 0' && github.event.schedule != '0 8 * * 6') ||
-      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' && 
-       (formatTime(github.event.workflow_run.created_at, 'E') != 'Sun' && formatTime(github.event.workflow_run.created_at, 'E') != 'Sat'))
+      (github.event_name == 'schedule') ||
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     
     steps:
     - uses: actions/checkout@v2
@@ -46,12 +45,24 @@ jobs:
         echo "设置时区为北京时间"
         date
         
+    - name: Check if weekend
+      id: check_weekend
+      run: |
+        DAYOFWEEK=$(date +%u)
+        if [[ "${{ github.event.name }}" != "workflow_dispatch" && $DAYOFWEEK -gt 5 ]]; then
+          echo "IS_WEEKEND=true" >> $GITHUB_OUTPUT
+        else
+          echo "IS_WEEKEND=false" >> $GITHUB_OUTPUT
+        fi
+        
     - name: Install dependencies
+      if: steps.check_weekend.outputs.IS_WEEKEND != 'true'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
     - name: Run audio generation
+      if: steps.check_weekend.outputs.IS_WEEKEND != 'true'
       run: |
         # 确保目录存在
         mkdir -p Audio_papers
@@ -77,6 +88,7 @@ jobs:
         TZ: Asia/Shanghai
         
     - name: Commit and push if changed
+      if: steps.check_weekend.outputs.IS_WEEKEND != 'true'
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
