--- a/.github/workflows/daily-paper-download.yml
+++ b/.github/workflows/daily-paper-download.yml
@@ -16,14 +16,12 @@ on:
         required: false
         type: string
   schedule:
-    - cron: '0 6 * * 1-5'  # UTC 6:00 (Beijing 14:00) 仅在工作日运行
+    - cron: '0 10 * * 1-5'  # UTC 10:00 (Beijing 18:00) 仅在工作日运行
 
 jobs:
   download:
     runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'schedule' && github.event.schedule != '0 6 * * 0' && github.event.schedule != '0 6 * * 6')
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'
     
     steps:
     - uses: actions/checkout@v2
@@ -40,12 +38,24 @@ jobs:
         echo "设置时区为北京时间"
         date
         
+    - name: Check if weekend
+      id: check_weekend
+      run: |
+        DAYOFWEEK=$(date +%u)
+        if [[ "${{ github.event_name }}" != "workflow_dispatch" && $DAYOFWEEK -gt 5 ]]; then
+          echo "IS_WEEKEND=true" >> $GITHUB_OUTPUT
+        else
+          echo "IS_WEEKEND=false" >> $GITHUB_OUTPUT
+        fi
+        
     - name: Install dependencies
+      if: steps.check_weekend.outputs.IS_WEEKEND != 'true'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
     - name: Run download
+      if: steps.check_weekend.outputs.IS_WEEKEND != 'true'
       run: |
         # 确保目录存在
         mkdir -p Paper_metadata_download
@@ -71,6 +81,7 @@ jobs:
         TZ: Asia/Shanghai
         
     - name: Commit and push if changed
+      if: steps.check_weekend.outputs.IS_WEEKEND != 'true'
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
